--- a/app/sage.yaml
+++ b/app/sage.yaml
@@ -2,8 +2,8 @@ name: "snow classifier"
 version: "0.0.1"
 description: "classifies whether there is snow on the ground at the Bad River site"
 keywords: "snow detection, machine learning"
-authors: "Alex Arnold <alexarnold2024@u.northwestern.edu> and Seongha Park <seongha.park@anl.gov>"
-collaborators: "Waggle Team <https://wa8.gl>"
+authors: "Alex Arnold <alexarnold2024@u.northwestern.edu>"
+collaborators: "Seongha Park <seongha.park@anl.gov> and Waggle Team <https://wa8.gl>"
 funding: ""
 license: ""
 homepage: ""
