--- a/sage.yaml
+++ b/sage.yaml
@@ -1,3 +1,12 @@
+inputs:
+  - model
+    type: string
+  -stream
+    type: string
+  -debug
+    type: boolean
+  -continuous
+    type: boolean
 name: "snow classifier"
 version: "0.1.0"
 description: "classifies whether there is snow on the ground at the Bad River site"
