--- a/sage.yaml
+++ b/sage.yaml
@@ -1,12 +1,4 @@
-inputs:
-  - model
-    type: string
-  -stream
-    type: string
-  -debug
-    type: boolean
-  -continuous
-    type: boolean
+
 name: "snow classifier"
 version: "0.1.1"
 description: "classifies whether there is snow on the ground at the Bad River site"
@@ -20,3 +12,14 @@ source:
   architectures:
     - "linux/amd64"
     - "linux/arm64"
+inputs:
+    - id: "model"
+      type: "string"
+    - id: "continuous"
+      type: "boolean"
+    - id: "stream"
+      type: "string"
+    - id: "conf-thres"
+      type: "float"
+    - id: "iou-thres"
+      type: "float"
